--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     "short_name": "MRMODS v1",
     "start_url": "./index.html",
     "display": "standalone",
-    "background_color": "#ffffff",
+    "background_color": "#000000",
     "theme_color": "#2F3BA2",
     "icons": [
       {
@@ -37,32 +37,32 @@
       font-family: 'Roboto', sans-serif;
       margin: 0;
       padding: 0;
-      background: #F4F7FF;
+      background: #000000; /* خلفية سوداء */
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
-      color: #333;
+      color: white; /* نص أبيض */
     }
 
     .container {
       text-align: center;
-      background-color: #FFFFFF;
+      background-color: #222222; /* خلفية داخلية داكنة */
       padding: 40px;
       border-radius: 12px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
       max-width: 600px;
       width: 100%;
     }
 
     h1 {
-      font-size: 32px;
-      color: #2F3BA2;
+      font-size: 36px;
+      color: white; /* نص أبيض */
     }
 
     p {
       font-size: 18px;
-      color: #555;
+      color: #CCCCCC; /* نص بلون رمادي فاتح */
     }
 
     .cta-btn {
@@ -94,14 +94,24 @@
       font-weight: bold;
       margin-bottom: 20px;
     }
+
+    .app-title {
+      font-size: 36px;
+      color: white;
+      font-weight: bold;
+      margin-bottom: 20px;
+    }
   </style>
 </head>
 
 <body>
   <div class="container">
-    <!-- إعلان أعلى العنوان -->
+    <!-- عنوان التطبيق في الأعلى -->
+    <div class="app-title">MRMODS App v1</div>
+    
+    <!-- إعلان -->
     <div class="announcement">قريباً تطبيق شهادات مجانية للآيفون</div>
-    <h1>MRMODS App v1</h1>
+
     <p>نحن سعداء بتقديم تجربة تفاعلية رائعة لك!</p>
     <a href="#" class="cta-btn">ابدأ الآن</a>
     <img src="https://via.placeholder.com/400" alt="صورة ترويجية" class="image">
