--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MRMODS App v1</title>
 
+  <!-- تعيين أيقونة الموقع (favicon) -->
+  <link rel="icon" href="https://cdn4.cdn-telegram.org/file/WPXRkyFdcvM5hfu21Wa5KwzYv1FtqXW8be8_WnhrdqNHTDE2qqbKQOYUmpljZgOgdBOeA77gcOz8u7Wg5N38NY01N3x3UUNyQ3DqOSEf71qLscTEL4XTwSwkmi93w__8w3RVDrkRPdj5jOKP5_2dbNgOLL0VDIH_ZEcNLh2SRegiCeyNuw7th83OUXd_bZ1AFos_fSXKKAmwl9w4Ugf-PfrDvoCPkGixpU7tO68o5oNNPotet8I6WZ234_kBQRYtxZOqL5iVwUFLK-DEun1jwJyZCFZwvL6U6pQbvLBhL_tymJ0hlPf94gBXkaFSgiD8TUEf6v1yUmImWi0FB1xxeA.jpg" type="image/jpeg">
+  
   <!-- المانيفست -->
   <link rel="manifest" href="data:application/json,{
     "name": "MRMODS App v1",
@@ -63,11 +66,6 @@
       color: white; /* نص أبيض */
     }
 
-    p {
-      font-size: 18px;
-      color: #CCCCCC; /* نص بلون رمادي فاتح */
-    }
-
     .announcement {
       font-size: 18px;
       color: #FF6A00;
@@ -106,6 +104,29 @@
     .icon-btn i {
       margin-right: 10px;
     }
+
+    /* تصميم الأزرار البنفسجية أسفل الإعلان */
+    .buttons-container {
+      margin-top: 30px;
+    }
+
+    .purple-btn {
+      display: inline-block;
+      background-color: #800080; /* اللون البنفسجي */
+      color: white;
+      font-size: 18px;
+      padding: 14px 30px;
+      border-radius: 30px;
+      border: none;
+      text-decoration: none;
+      margin: 10px;
+      transition: background-color 0.3s ease, transform 0.3s ease;
+    }
+
+    .purple-btn:hover {
+      background-color: #6A006A; /* اللون البنفسجي الغامق عند المرور */
+      transform: translateY(-3px);
+    }
   </style>
 </head>
 
@@ -120,7 +141,12 @@
       قريباً تطبيق شهادات مجانية للآيفون
     </div>
 
-    <p>نحن سعداء بتقديم تجربة تفاعلية رائعة لك!</p>
+    <!-- أزرار البنفسجي أسفل الإعلان -->
+    <div class="buttons-container">
+      <a href="#" class="purple-btn">زر 1</a>
+      <a href="#" class="purple-btn">زر 2</a>
+      <a href="#" class="purple-btn">زر 3</a>
+    </div>
   </div>
 
   <script>
@@ -151,21 +177,4 @@
         console.log('[Service Worker] تفعيل');
       });
 
-      self.addEventListener('fetch', function(event) {
-        event.respondWith(
-          caches.match(event.request).then(function(response) {
-            return response || fetch(event.request);
-          })
-        );
-      });
-    `;
-
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register(URL.createObjectURL(new Blob([swCode], { type: 'application/javascript' })))
-        .then(reg => console.log('✅ Service Worker مسجل بنجاح!'))
-        .catch(err => console.log('❌ فشل التسجيل:', err));
-    }
-  </script>
-
-</body>
-</html>
+      self.addEventListener
