--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
 
     <!-- أزرار البنفسجي أسفل الإعلان -->
     <div class="buttons-container">
-      <a href="#" class="purple-btn">زر 1</a>
-      <a href="#" class="purple-btn">زر 2</a>
-      <a href="#" class="purple-btn">زر 3</a>
+      <a href="https://t.me/MRMods_Official" class="purple-btn">Telegram</a>
+      <a href="https://youtube.com/@mrmods-official?si=yerMnGfEtwMpasNW" class="purple-btn">Youtube</a>
+      <a href="https://mrmods-repo.netlify.app/" class="purple-btn">MyRepositorie</a>
     </div>
   </div>
 </body>
