--- a/index.html
+++ b/index.html
@@ -54,12 +54,14 @@
 
     .container {
       text-align: center;
-      background-color: rgba(34, 34, 34, 0.7); /* خلفية داكنة شفافة للداخلية */
+      background-color: rgba(34, 34, 34, 0.5); /* خلفية داكنة شفافة */
       padding: 40px;
       border-radius: 12px;
       box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
       max-width: 600px;
       width: 100%;
+      backdrop-filter: blur(10px); /* تطبيق تأثير الضبابية (ليكود جلاس) */
+      border: 2px solid rgba(255, 255, 255, 0.1); /* إضافة إطار خفيف */
     }
 
     h1 {
