--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       font-family: 'Roboto', sans-serif;
       margin: 0;
       padding: 0;
-      background: url('https://i.pinimg.com/736x/c2/47/b6/c247b634a03534a0f035458cb3a1d34e.jpg') no-repeat center center fixed; /* إضافة صورة الخلفية */
+      background: url('https://server.wallpaperalchemy.com/storage/wallpapers/50/majestic-lighthouse-on-icy-cliff-4k-wallpaper.jpg') no-repeat center center fixed; /* إضافة صورة الخلفية الجديدة */
       background-size: cover; /* تكبير الصورة لتغطية كامل الخلفية */
       display: flex;
       justify-content: center;
