--- a/index.html
+++ b/index.html
@@ -83,24 +83,23 @@
       margin-bottom: 20px;
     }
 
-    /* إضافة إطار زر حول الأيقونة والنص */
+    /* زر "قريباً تطبيق شهادات مجانية للآيفون" مع الخلفية الشفافة */
     .icon-btn {
       display: inline-flex;
       align-items: center;
       justify-content: center;
-      background-color: #FF6A00;
+      background-color: transparent; /* جعل الزر شفاف */
       color: white;
       font-size: 18px;
       padding: 12px 24px;
       border-radius: 30px;
-      border: 2px solid #FF6A00;
+      border: 2px solid #FF6A00; /* حدود برتقالية خفيفة */
       transition: all 0.3s ease;
       margin-top: 20px;
     }
 
     .icon-btn:hover {
-      background-color: #D85A00;
-      border-color: #D85A00;
+      background-color: rgba(255, 106, 0, 0.2); /* خلفية خفيفة عند المرور */
       cursor: pointer;
     }
 
