--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
       box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
       max-width: 600px;
       width: 100%;
-      backdrop-filter: blur(10px);
-      border: 2px solid rgba(255, 255, 255, 0.2);
+      border: 2px solid rgba(255, 255, 255, 0.2); /* إزالة خاصية blur */
       animation: slideUp 1s ease-out; /* انميشن لظهور المحتوى */
     }
 
