--- a/index.html
+++ b/index.html
@@ -203,9 +203,9 @@
     </div>
 
     <div class="buttons-container">
-      <a href="https://www.example.com/1" class="purple-btn" target="_blank">زر 1</a>
-      <a href="https://www.example.com/2" class="purple-btn" target="_blank">زر 2</a>
-      <a href="https://www.example.com/3" class="purple-btn" target="_blank">زر 3</a>
+      <a href="https://t.me/MRMods_Official" class="purple-btn" target="_blank">قناة التيليجرام</a>
+      <a href="https://youtube.com/@mrmods-official?si=yerMnGfEtwMpasNW" class="purple-btn" target="_blank">قناة اليوتيوب</a>
+      <a href="https://mrmods-repo.netlify.app/" class="purple-btn" target="_blank">سورس الجيليبريك</a>
     </div>
   </div>
 </body>
