--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <div class="app-title">MRMODS App v1</div>
     
     <!-- زر مع رابط -->
-    <a href="https://www.example.com" class="icon-btn" target="_blank">
+    <a href="main.html" class="icon-btn" target="_blank">
       <i class="fas fa-certificate"></i>
       قريباً تطبيق شهادات مجانية للآيفون
     </a>
