--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
       transition: all 0.3s ease;
       margin-top: 20px;
       animation: pulse 1.5s infinite;
+      text-decoration: none; /* إزالة الخط أسفل الرابط */
     }
 
     @keyframes pulse {
