--- a/main.html
+++ b/main.html
@@ -107,6 +107,7 @@
       transition: all 0.3s ease;
       margin-top: 20px;
       animation: pulse 1.5s infinite;
+      text-decoration: none; /* إزالة الخط أسفل الرابط */
     }
 
     @keyframes pulse {
@@ -193,18 +194,6 @@
 <body>
   <div class="container">
     <div class="app-title">MRMODS App v1</div>
-    
-    <!-- زر مع رابط -->
-    <a href="https://www.example.com" class="icon-btn" target="_blank">
-      <i class="fas fa-certificate"></i>
-      قريباً تطبيق شهادات مجانية للآيفون
-    </a>
-
-    <div class="buttons-container">
-      <a href="https://t.me/MRMods_Official" class="purple-btn" target="_blank">قناة التيليجرام</a>
-      <a href="https://youtube.com/@mrmods-official?si=yerMnGfEtwMpasNW" class="purple-btn" target="_blank">قناة اليوتيوب</a>
-      <a href="https://mrmods-repo.netlify.app/" class="purple-btn" target="_blank">سورس الجيليبريك</a>
-    </div>
   </div>
 </body>
 </html>
