--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     <!-- زر مع رابط -->
     <a href="main.html" class="icon-btn" target="_blank">
       <i class="fas fa-certificate"></i>
-      قريباً تطبيق شهادات مجانية للآيفون
+        شهادات مجانية للآيفون
     </a>
 
     <div class="buttons-container">
