--- a/index.html
+++ b/index.html
@@ -200,13 +200,12 @@
 <body>
   <div class="container">
     <div class="app-title">MRMODS App v1</div>
-    
-    <!-- زر مع رابط -->
-    <a href="main.html" class="icon-btn" target="_blank">
-      <i class="fas fa-certificate"></i>
-        شهادات مجانية للآيفون
-    </a>
 
+    </div>
+        <br>
+        <a href="main.html" class="button">شهادات مجانية للآيفون</a>
+    </div>
+    
     <div class="buttons-container">
       <a href="https://t.me/MRMods_Official" class="purple-btn" target="_blank">قناة التيليجرام</a>
       <a href="https://youtube.com/@mrmods-official?si=yerMnGfEtwMpasNW" class="purple-btn" target="_blank">قناة اليوتيوب</a>
