--- a/main.html
+++ b/main.html
@@ -147,21 +147,17 @@
       transform: scale(0.95);
     }
 
-    .textarea-container {
+    /* عرض السكربت داخل عنصر pre */
+    .script-container {
       margin-top: 20px;
+      background-color: rgba(255, 255, 255, 0.2);
+      padding: 15px;
+      border-radius: 10px;
       text-align: left;
-    }
-
-    textarea {
-      width: 100%;
-      height: 150px;
-      font-size: 16px;
-      padding: 10px;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-      background-color: #f4f4f4;
-      color: #333;
-      resize: vertical;
+      max-height: 300px;
+      overflow-y: auto;
+      font-family: monospace;
+      color: #ffcc00;
     }
 
     .download-btn {
@@ -185,56 +181,21 @@
     .download-btn:active {
       transform: scale(0.95);
     }
-
-    @media (max-width: 768px) {
-      .container {
-        width: 80%;
-        padding: 30px;
-      }
-
-      h1 {
-        font-size: 28px;
-      }
-
-      .app-title {
-        font-size: 1.5rem;
-      }
-
-      .purple-btn {
-        padding: 12px 25px;
-      }
-    }
-
-    @media (max-width: 480px) {
-      .container {
-        width: 90%;
-        padding: 20px;
-      }
-
-      h1 {
-        font-size: 24px;
-      }
-
-      .app-title {
-        font-size: 1.2rem;
-      }
-
-      .purple-btn {
-        padding: 10px 20px;
-      }
-    }
   </style>
 </head>
 
 <body>
   <div class="container">
     <div class="app-title">MRMODS App</div>
-    <!-- مساحة لكتابة سكربت -->
-    <div class="textarea-container">
-      <label for="script-input">أدخل السكربت الخاص بك:</label>
-      <textarea id="script-input" placeholder="اكتب السكربت هنا..."></textarea>
+
+    <!-- عرض السكربت في مساحة ثابتة -->
+    <div class="script-container">
+      <pre id="script-display">
+        // هنا يمكنك إضافة السكربت الذي تريده
+        console.log("Hello, this is your script!");
+      </pre>
     </div>
-    
+
     <!-- زر التحميل المباشر -->
     <a href="path-to-your-file.zip" class="download-btn" download>
       تحميل الملف
