--- a/main.html
+++ b/main.html
@@ -191,8 +191,17 @@
     <!-- عرض السكربت في مساحة ثابتة -->
     <div class="script-container">
       <pre id="script-display">
-        // هنا يمكنك إضافة السكربت الذي تريده
-        console.log("Hello, this is your script!");
+        密码 / Pass: AppleP12.com
+
+证书名称 / CertName:
+NREH ESTATE INFORMATION TECHNOLOGY CO.,LTD.
+
+上传时间 / UploadTime:
+2025-07-01 20:55:04 GMT+08:00
+
+状态 / Status:
+🟢良好/Good
+
       </pre>
     </div>
 
