--- a/main.html
+++ b/main.html
@@ -206,8 +206,10 @@ NREH ESTATE INFORMATION TECHNOLOGY CO.,LTD.
     </div>
 
     <!-- زر التحميل المباشر -->
-    <a href="path-to-your-file.zip" class="download-btn" download>
-      تحميل الملف
+    <a href="https://filesharingbot-by-aj.onrender.com/dl/686524f8874536a1670e15ed" class="download-btn" download>
+      تحميل ملف الشهادة
+      <a href="https://sign.applep12.com/Install/68644b0a-055c-e901-003f-51fb201a44f2" class="download-btn" download>
+      تثبيت ايساين مباشر
     </a>
   </div>
 </body>
